--- a/deep-learning.html
+++ b/deep-learning.html
@@ -82,7 +82,7 @@
 <p>Oct 15, 2019 ... As either the Deep Learning Engineer or ML Research Engineer, you will be at 
 the center of our core mission, building state of the art technologies. You will be?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698129226-internship-object-detection-with-deep-learning'>Bosch Group Internship Object Detection with Deep Learning | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698129226-internship-object-detection-with-deep-learning'>Bosch Group Internship Object Detection with Deep Learning | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -142,7 +142,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/irisautomation/jobs/4481264002'>Job Application for Deep Learning/Machine Learning Research Engineer at Iris Automation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/irisautomation/jobs/4481264002'>Job Application for Deep Learning/Machine Learning Research Engineer at Iris Automation</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -150,7 +150,7 @@ the center of our core mission, building state of the art technologies. You will
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://b10.recruitee.com/o/junior-applied-deeplearning-mfd-signatrix'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://b10.recruitee.com/o/junior-applied-deeplearning-mfd-signatrix'>
       Junior Applied Deep-Learning (m/f/d) | Signatrix - b10
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -240,7 +240,7 @@ Full-Time. Apply for this job. Hayden AI is an emerging artificial intelligence?
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/1361EF4831'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
+<h5><a href='https://crisalix.workable.com/j/1361EF4831'>Crisalix - Jobs: Deep Learning Engineer with Strong iOS Development Skills - Apply online</a></h5> 
 <p><span class="badge badge-light">Lisbon, Portugal</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
@@ -288,7 +288,7 @@ with a?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/oDY4afwz'>Samsung Semiconductor, Inc. Careers - Deep Learning Computer Vision Researcher/ Scientist Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/oDY4afwz'>Samsung Semiconductor, Inc. Careers - Deep Learning Computer Vision Researcher/ Scientist Intern</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-09-26</p>
 <hr/>
@@ -304,7 +304,7 @@ with a?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-09-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/simberobotics.com/0d6ae2e7-4206-40b7-b804-f01076b618fe'>Simbe Robotics - Deep Learning Engineer - OCR and Image Captioning</a></h5> 
+<h5><a href='https://jobs.lever.co/simberobotics.com/0d6ae2e7-4206-40b7-b804-f01076b618fe'>Simbe Robotics - Deep Learning Engineer - OCR and Image Captioning</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-09-24</p>
 <hr/>
@@ -334,11 +334,11 @@ design, build, and ship TensorRT: NVIDIA's high-performance deep learning?...</p
 <p>Sep 9, 2019 ... We are looking for talented software engineers and computer architects to help 
 design, build, and ship TensorRT: NVIDIA's high-performance deep learning?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/samsungssi/job/oDY4afwz'>Samsung Semiconductor, Inc. Careers - Deep Learning Computer Vision Researcher/ Scientist Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oDY4afwz'>Samsung Semiconductor, Inc. Careers - Deep Learning Computer Vision Researcher/ Scientist Intern</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-09-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsungssi/job/oJY4afwF'>Samsung Semiconductor, Inc. Careers - Deep Learning Theory Researcher/ Scientist Intern</a></h5> 
+<h5><a href='http://jobs.jobvite.com/samsungssi/job/oJY4afwF'>Samsung Semiconductor, Inc. Careers - Deep Learning Theory Researcher/ Scientist Intern</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-09-18</p>
 <hr/>
@@ -402,7 +402,7 @@ Clara, More... Software Intern, Math Libraries - CUDA | US, CA, Santa Clara.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cardinalhire/cf15bd50-20e2-4c24-b490-521f1a8ceae9'>Stealth Startup - Deep Learning Research Scientist - up to $600,000 + up to 10% Equity</a></h5> 
+<h5><a href='https://jobs.lever.co/cardinalhire/cf15bd50-20e2-4c24-b490-521f1a8ceae9'>Stealth Startup - Deep Learning Research Scientist - up to $600,000 + up to 10% Equity</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
